[gd_scene load_steps=4 format=3 uid="uid://c6fnxt60xb1r4"]

[ext_resource type="Script" path="res://Menu_principal.gd" id="1_i2115"]
[ext_resource type="Texture2D" uid="uid://dpk6quj2dcky4" path="res://1000_F_218185178_KQoxLm3r6pr56QnrUBpi7HAYIUv3Y32i (1).jpg" id="3_sla5k"]
[ext_resource type="AudioStream" uid="uid://ctu4e3uch6amh" path="res://youtube_ffldeFvGDcM_audio.mp3" id="3_vqgcq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i2115")
metadata/_edit_horizontal_guides_ = [-86.0]

[node name="Sonidos" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource("3_vqgcq")
volume_db = -27.814
autoplay = true

[node name="1000F218185178KQoxLm3r6Pr56QnrUBpi7hayiUv3y32i(1)" type="Sprite2D" parent="."]
position = Vector2(580, 323)
scale = Vector2(1.1585, 1.37606)
texture = ExtResource("3_sla5k")

[node name="Button2" type="Button" parent="1000F218185178KQoxLm3r6Pr56QnrUBpi7hayiUv3y32i(1)"]
offset_left = -110.0
offset_top = -190.0
offset_right = 97.0
offset_bottom = -90.0
text = "Juego "

[node name="Button" type="Button" parent="1000F218185178KQoxLm3r6Pr56QnrUBpi7hayiUv3y32i(1)"]
offset_left = -110.0
offset_top = 70.0
offset_right = 97.0
offset_bottom = 170.0
text = "Creditos "

[node name="Button3" type="Button" parent="1000F218185178KQoxLm3r6Pr56QnrUBpi7hayiUv3y32i(1)"]
offset_left = -110.0
offset_top = -60.0
offset_right = 97.0
offset_bottom = 40.0
text = "Instrucciones"

[connection signal="pressed" from="1000F218185178KQoxLm3r6Pr56QnrUBpi7hayiUv3y32i(1)/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="1000F218185178KQoxLm3r6Pr56QnrUBpi7hayiUv3y32i(1)/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="1000F218185178KQoxLm3r6Pr56QnrUBpi7hayiUv3y32i(1)/Button3" to="." method="_on_button_3_pressed"]
